backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stanley-bank-server
  labels:
    app: stanley-bank-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stanley-bank-server
  template:
    metadata:
      labels:
        app: stanley-bank-server
    spec:
      containers:
      - name: stanley-bank-server
        image: 178220402760.dkr.ecr.us-east-2.amazonaws.com/stanley-bank-backend:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
