backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stanley-bank-server-service
spec:
  selector:
    app: stanley-bank-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
