frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stanley-bank-service
spec:
  type: LoadBalancer
  selector:
    app: stanley-bank
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
