ingress-main.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stanley-bank-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - stanleybank.site
    secretName: stanley-bank-tls
  rules:
  - host: stanleybank.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stanley-bank-service
            port:
              number: 80
